--- a/css/form.css
+++ b/css/form.css
@@ -106,6 +106,7 @@ ul.fancytree-container,.cloud_upload{
 }
 .rpicloud-user{
     border-bottom: 1px solid #ddd;
+    display: none;
 }
 .form-field.user-wrapper{
     margin: 10px 50px;
@@ -175,6 +176,7 @@ a.cloud_del:hover {
     overflow-x: hidden;
     border-bottom: 1px solid #ccc;
     margin-bottom: 10px;
+    display: block;
 }
 
 .rpicloud-log-wrapper{
